@@ -1,6 +1,7 @@
 AlcoBot v0.5.0 (not released):
   NEW: Added command aliases !dn and !up for !leechers and !uploaders, respectively.
   NEW: Expanded zipscript support to include ioSFV (_tUFF) and Project-ZS (Caladan/esmandil).
+  NEW: FTP client library with SSL/TLS support.
   NEW: Listing of all available variables (generated by makeVarRef.tcl).
   NEW: Rewrote the command interface, proper support for aliases and flag checking.
   CHG: Removed the "cmdPrefix" option from [Module::Free].
